style: unify script headers

--- a/layout/vereine.css
+++ b/layout/vereine.css
@@ -1,9 +1,15 @@
 /*
- * Zugzwang Project
- * deutsche-schachjugend.de
- * Copyright (c) 2016-2019 Gustaf Mossakowski <gustaf@koenige.org>
- * Copyright (c) 2020      Falco Nogatz <fnogatz@gmail.com>
- * CSS fuer Vereinsdaten
+ * clubs module
+ * CSS
+ *
+ * Part of »Zugzwang Project«
+ * https://www.zugzwang.org/modules/clubs
+ *
+ * @author Gustaf Mossakowski <gustaf@koenige.org>
+ * @author Falco Nogatz <fnogatz@gmail.com>
+ * @copyright Copyright © 2016-2019 Gustaf Mossakowski
+ * @copyright Copyright © 2020 Falco Nogatz
+ * @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
  */
 
 
