--- a/layout/clubs.css
+++ b/layout/clubs.css
@@ -174,6 +174,11 @@ ul.orghierarchy
 #map .popup .more
 			{ padding-bottom: 1em; }
 
+/* clubs.template.txt */
+#filters	{ font-size: 90%; margin: 1rem 0; }
+#filters label
+			{ display: block; margin: .5rem 0 0; }
+
 /* Map, disable some page elements */
 
 #map .banner, #map .logo-top, #map #breadcrumbs
